# advent-2023

./: .gitignore  CMakeLists.txt  Dockerfile  flake.nix  main.cpp
scripts/: build.sh  cmake.sh
src/: CMakeLists.txt  main.cpp  test.cpp
src/01/: CMakeLists.txt  main.cpp
src/02/: CMakeLists.txt  main.cpp
src/03/: CMakeLists.txt  main.cpp
src/04/: CMakeLists.txt
src/05/: CMakeLists.txt  main.cpp
src/06/: CMakeLists.txt  input-b  main.cpp
src/advent/: CMakeLists.txt  advent.cpp  advent.h
test/: CMakeLists.txt  test.cpp
